--- a/B3427_TPDW/ajax/PartieAjaxDOM.html
+++ b/B3427_TPDW/ajax/PartieAjaxDOM.html
@@ -327,7 +327,8 @@
 
         
         <input name="button14" type="button" id="myButton14" onClick="colorByArea('espace_svg_map')" value="14. Color by area" />
-        <input name="button15" type="button" id="myButton15" onClick="calculateDistance('distance')" value="15. Calculate distance between two countries (click on the map)" />
+        <input name="button15" type="button" id="myButton15" onClick="colorByDensity('espace_svg_map')" value="15. Color by density" />
+        <input name="button16" type="button" id="myButton16" onClick="calculateDistance('distance')" value="16. Calculate distance between two countries (click on the map)" />
         <span id="distance">
         </span>
         <br/>
